# ROCm

./: .gitmodules  .wordlist.txt  CHANGELOG.md  Cargo.toml  README.md  RELEASE.md  conceptual_changes_for_rust_cli_integration.md  rust_for_gpu_assembly_on_rocm_summary.md
.azuredevops/ci-builds/: aomp-mainline.yml
.azuredevops/components/: AMDMIGraphX.yml  MIOpen.yml  Tensile.yml  amdsmi.yml  aomp.yml  llvm-project.yml  rocm-cmake.yml  rocm-core.yml  rocm_smi_lib.yml  rocprofiler-compute.yml  rocprofiler-register.yml  rocprofiler-sdk.yml
.azuredevops/nightly/: essanay.yml  mathlibs.yml  rocm-nightly.yml  springfield.yml
.azuredevops/scripts/: dependencyGraph.py
docs/: index.md
docs/compatibility/: compatibility-matrix-historical-6.0.csv  compatibility-matrix.rst
docs/reference/: env-variables.rst
docs/sphinx/: _toc.yml.in  requirements.in  requirements.txt
find_first_whl/: Cargo.toml  README.md
find_first_whl/src/: main.rs
rust_hip_info/: Cargo.toml  README.md  build.rs
rust_hip_info/src/: ffi.rs  main.rs  safe_hip_wrappers.rs
rust_vector_add/: .gitignore  ARCHITECTURE.md  Cargo.toml  README.md  build.rs  vectorAdd_kernel.hip  wrapper.h
rust_vector_add/src/: hip_utils.rs  main.rs
src/: build_logic.rs  clean_logic.rs  config.rs  main.rs  outdir_logic.rs  utils.rs
tools/autotag/: components.toml  requirements.txt  (+1 more)
tools/rust-builders/rocm-cmake-builder/: Cargo.toml  README.md
tools/rust-builders/rocm-cmake-builder/src/: main.rs
tools/rust-builders/rocminfo-builder/: Cargo.toml  README.md
tools/rust-builders/rocminfo-builder/src/: main.rs
(+34 files in other folders)
