[package]
name = "rust_hip_info"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.80" # Updated to a recent version
log = "0.4.20"    # Updated to a recent version
env_logger = "0.11.1" # Updated to a recent version

[build-dependencies]
bindgen = "0.69.4" # Using a specific recent version of bindgen
# cc is not needed as we are not compiling C/C++ source files directly with build.rs, only linking.
