[package]
name = "rocm-cmake-builder"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "=1.0.75"
clap = { version = "=4.4.8", features = ["derive"] }
fs_extra = "=1.3.0"
glob = "0.3.1" # Add this line
which = "=4.4.2"

[dev-dependencies]
tempfile = "3.8.0"
